ags (3.2.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2_cache_turtle_find()

ags (3.2.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved instantiate AgsPluginBrowser only as needed in AgsLineMemberEditor

ags (3.2.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AppStream XML

ags (3.2.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated API Reference Manuals
	* minor improvements

ags (3.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsLv2TurtleScanner quick scan
	* added AgsSimpleFile fixup to deal with LV2 quotes
	* fixed LV2 quotes in effect and specifier
	* minor bug-fixes

ags (3.2.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-play-lv2 to handle note-on correctly
	* fixed ags-play-dssi to handle note-on correctly

ags (3.2.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented LV2_OPTIONS__options
	* fixed LV2_OPTIONS__interface URI
	* fixed ags_math_util_test.c to use ags_strv_equal()

ags (3.2.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* exported missing symbols

ags (3.2.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted GLib dependency to version 2.56.0
	* refactored AgsAudio, AgsChannel, AgsRecycling and AgsAudioSignal to use property for some setter functions
	* minor improvements

ags (3.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved introspection annotations of AgsGui

ags (3.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_strv_equal() comparing unsorted string vectors
	* disabled GMainLoop integration of AgsTaskLauncher in AgsAudioApplicationContext

ags (3.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented some getter and setter functions